--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <header> 
             <nav class="navbar">
                 <div class="logo">
-                    <img src="./src/colorfoodLogo.JPG" alt="foodlogo">
+                    <img src="./src/cocktailIcon.png" alt="foodlogo">
+                    <h2>colorfood</h2>
                 </div>
+                
                 <li class="search-icon">
                     <input type="search" placeholder="Search">
                     <span class="fas fa-search"></span>
