--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>colourfood</title>
     <link rel="stylesheet" href="styleshomepage.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript">
+        $(window).on('scroll', function(){
+            if($(window).scrollTop()){
+                $('nav').addClass('nav-effect');
+            }
+            else 
+            {
+                $('nav').removeClass('nav-effect');
+            }
+        })
+    </script>
 </head>
 
 <body>
