connection html files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a class="navyellow" href="#">yellow</a></li>
                     <li><a class="navpurple" href="#">purple</a></li>
                     <li><a class="navbrown" href="#">brown</a></li>
-                    <li><a class="navred" href="#">red</a></li>
+                    <li><a class="navred" href="./redrecipe.html">red</a></li>
                     <li><a class="navwhite" href="#">white</a></li>
                     <li><a class="navgreen" href="#">green</a></li>
                 </ul>
@@ -88,7 +88,7 @@
                         <h2 class="text">brown</h2>
                     </a>
 
-                    <a class="image-container magic-4" href="redFoodPage">
+                    <a class="image-container magic-4" href="./redrecipe.html">
                         <div class="image">
                             <img src="./src/img/red-raspberries-square.jpg" alt="raspberries">
                         </div>
