recipe-page header ready

--- a/recipe-page.html
+++ b/recipe-page.html
@@ -4,13 +4,120 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Colourfood Recipe</title>
     <!-- links -->
     <link rel="stylesheet" href="style-recipe-page.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+
+    <title>Colourfood Recipe</title>
   </head>
   <body>
-    <h1>
-      This is a static template, there is no bundler or bundling involved!
-    </h1>
+    <div class="rcp-summary">
+      <div class="column">
+        <div class="rcp-image column"></div>
+      </div>
+
+      <div class="column">
+        <div class="rcp-details">
+          <h1 class="rcp-title">Olives with chocolate</h1>
+
+          <div class="stars">
+            <span class="star"><i class="fas fa-star"></i></span>
+            <span class="star"><i class="fas fa-star"></i></span>
+            <span class="star"><i class="fas fa-star"></i></span>
+            <span class="star"><i class="fas fa-star"></i></span>
+            <span class="star"><i class="fas fa-star"></i></span>
+            <a class="share-btn" href="#">SHARE</a>
+          </div>
+
+          <p class="rcp-description">
+            Eat food. This means eat real food. Food your great great
+            grandmother would recognize as something she grew up with. Your
+            great great grandmother would not recognize margarine or Capn’
+            Crunch cereal, or Wonder Bread. She wouldn’t know what to do with a
+            Coke or Mountain Dew.
+          </p>
+          <div class="p-infos-wrapper">
+            <div class="pratical-infos">
+              <div>
+                <img src="images\hard-work.svg" />
+              </div>
+              <div>
+                <div class="info">Easy</div>
+                <div class="info-categorie">Preparation</div>
+              </div>
+            </div>
+
+            <div class="pratical-infos">
+              <div>
+                <img src="images\wall-clock.svg" />
+              </div>
+              <div>
+                <div class="info">20</div>
+                <div class="info-categorie">Minutes</div>
+              </div>
+            </div>
+
+            <div class="pratical-infos">
+              <div>
+                <img src="images\calculator.svg" />
+              </div>
+              <div>
+                <div class="info">9000</div>
+                <div class="info-categorie">Calories</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rcp-content">
+      <div class="column">
+        <div class="ingredients-content">
+          <h2>Ingredients per 2 Servings</h2>
+          <div>
+            <table>
+              <tbody>
+                <tr>
+                  <td class="quantity">150 grams</td>
+                  <td class="ingredient">Sprouts</td>
+                </tr>
+                <tr>
+                  <td class="quantity">150 grams</td>
+                  <td class="ingredient">Sprouts</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="rcp-steps">
+          <h2>Preparation</h2>
+          <div>
+            <h3>Step 01</h3>
+            <p>
+              Were the walls of our meat industry to become transparent,
+              literally or even figuratively, we would not long continue to
+              raise, kill, and eat animals the way we do.
+            </p>
+
+            <h3>Step 02</h3>
+            <p>
+              When chickens get to live like chickens, they'll taste like
+              chickens, too.
+            </p>
+
+            <h3>Step 03</h3>
+            <p>
+              When chickens get to live like chickens, they'll taste like
+              chickens, too.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
