--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/beet-tagliatelle-with-walnuts.jpg" />
-                    <div class="recipedescription hide">Beet Tagliatelle</div>
+                    <img src="./assets/devils tongue hot sauce recipe.jpg" />
+                    <div class="recipedescription hide">Hot Sauce</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/Turkish-Delight-Recipe.jpg" />
-                    <div class="recipedescription hide">Turkish Delight</div>
+                    <img src="./assets/purple - violette-syrup-213.jpg" />
+                    <div class="recipedescription hide">Violette Syrup</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/cauliflower-pizza.jpg" />
-                    <div class="recipedescription hide">Couliflower Pizaa</div>
+                    <img src="./assets/Red-Borscht-Recipe.jpg" />
+                    <div class="recipedescription hide">Borscht</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
@@ -143,38 +143,38 @@
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/ice-cream.jpg" />
-                    <div class="recipedescription hide">Ice Cream</div>
+                    <img src="./assets/Rainbow-Smoothie-9B-600x902.jpg" />
+                    <div class="recipedescription hide">Rainbow Smoothie</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/beetpancake.jpg" />
-                    <div class="recipedescription hide">Beet Pancake</div>
+                    <img src="./assets/purple sweet potato soup.jpg" />
+                    <div class="recipedescription hide">Purple Sweet Potato Soup</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/Mulled-wine.jpg" />
-                    <div class="recipedescription hide">Mulled Wine</div>
+                    <img src="./assets/white-cake-recipe.jpg" />
+                    <div class="recipedescription hide">White Cake</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/lentilsoup.jpg" />
-                    <div class="recipedescription hide">Lentil Soup</div>
+                    <img src="./assets/brown cold-brew-coffee-with-almond-brown-sugar-syrup-1.jpg" />
+                    <div class="recipedescription hide">Cold Brew Coffee</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/Strawberry-Gazpacho.jpg" />
-                    <div class="recipedescription hide">Strawberry Gazpacho</div>
+                    <img src="./assets/yellow - homemade mustard.jpg" />
+                    <div class="recipedescription hide">Homemade mustard</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/Red-Borscht-Recipe.jpg" />
-                    <div class="recipedescription hide">Borscht Soup</div>
+                    <img src="./assets/a.jpg" />
+                    <div class="recipedescription hide">Alfredo Sauce</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/muammara.jpg" />
-                    <div class="recipedescription hide">Muhammara</div>
+                    <img src="./assets/brown Salted-Dark-Chocolate-Tart-Recipe-3-1.jpg" />
+                    <div class="recipedescription hide">Chocolate Tart</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
@@ -183,8 +183,8 @@
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/pear.jpg" />
-                    <div class="recipedescription hide">Red Pears</div>
+                    <img src="./assets/green vegan-thai-green-curry.jpg" />
+                    <div class="recipedescription hide">Thai Curry</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div> 
                 <div class="container">
