--- a/recipe-page.html
+++ b/recipe-page.html
@@ -20,8 +20,8 @@
       </div>
 
       <div class="column">
-        <div class="rcp-details">
-          <h1 class="rcp-title">Olives with chocolate</h1>
+        <div class="rcp-details gnrl-padding">
+          <h1 class="rcp-title">Magical Sprouts and Rapsberry Shake</h1>
 
           <div class="stars">
             <span class="star"><i class="fas fa-star"></i></span>
@@ -75,18 +75,30 @@
     </div>
     <div class="rcp-content">
       <div class="column">
-        <div class="ingredients-content">
+        <div class="ingredients-content gnrl-padding">
           <h2>Ingredients per 2 Servings</h2>
           <div>
             <table>
               <tbody>
                 <tr>
-                  <td class="quantity">150 grams</td>
-                  <td class="ingredient">Sprouts</td>
+                  <td class="quantity">200 grams</td>
+                  <td class="ingredient">Buckwheat Sprouts</td>
                 </tr>
                 <tr>
-                  <td class="quantity">150 grams</td>
-                  <td class="ingredient">Sprouts</td>
+                  <td class="quantity">200 grams</td>
+                  <td class="ingredient">Fresh Rapsberries</td>
+                </tr>
+                <tr>
+                  <td class="quantity">2 units</td>
+                  <td class="ingredient">Banana</td>
+                </tr>
+                <tr>
+                  <td class="quantity">300 mL</td>
+                  <td class="ingredient">Oat Milk</td>
+                </tr>
+                <tr>
+                  <td class="quantity">2 spoons</td>
+                  <td class="ingredient">Honey</td>
                 </tr>
               </tbody>
             </table>
@@ -94,26 +106,58 @@
         </div>
       </div>
       <div class="column">
-        <div class="rcp-steps">
+        <div class="rcp-steps gnrl-padding">
           <h2>Preparation</h2>
           <div>
-            <h3>Step 01</h3>
+            <h3>
+              <span>Step 01</span>
+            </h3>
             <p>
               Were the walls of our meat industry to become transparent,
               literally or even figuratively, we would not long continue to
               raise, kill, and eat animals the way we do.
             </p>
 
-            <h3>Step 02</h3>
+            <h3>
+              <span>Step 02</span>
+            </h3>
             <p>
               When chickens get to live like chickens, they'll taste like
               chickens, too.
             </p>
 
-            <h3>Step 03</h3>
+            <h3>
+              <span>Step 03</span>
+            </h3>
             <p>
-              When chickens get to live like chickens, they'll taste like
-              chickens, too.
+              He showed the words “chocolate cake” to a group of Americans and
+              recorded their word associations. “Guilt” was the top response. If
+              that strikes you as unexceptional, consider the response of French
+              eaters to the same prompt: “celebration.”
+            </p>
+
+            <h3>
+              <span>Step 04</span>
+            </h3>
+            <p>
+              He showed the words “chocolate cake” to a group of Americans and
+              recorded their word associations. “Guilt” was the top response. If
+              that strikes you as unexceptional, consider the response of French
+              eaters to the same prompt: “celebration.”
+            </p>
+
+            <h3>
+              <span>Step 05</span>
+            </h3>
+            <p>So that's us: processed corn, walking.</p>
+
+            <h3>
+              <span>Step 06</span>
+            </h3>
+            <p>
+              The human animal is adapted to, and apparently can thrive on, an
+              extraordinary range of different diets, but the Western diet,
+              however you define it, does not seem to be one of them.
             </p>
           </div>
         </div>
