--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             </div> <!-- categories container-->
             <div class= "masonry">
 
-                <div class="container">
+                <a href="recipe-page.html"><div class="container">
                     <img src="./assets/rhubarbcake.jpg" />
                     <div class="recipedescription hide">Rhubarb Cake</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
-                </div>
+                </div></a>
                 <div class="container">
                     <img src="./assets/beet-tagliatelle-with-walnuts.jpg" />
                     <div class="recipedescription hide">Beet Tagliatelle</div>
