--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 <body>
         <header> 
             <nav class="navbar">
-                <div class="logo">
-                    <img src="./src/cocktailIcon.png" alt="foodlogo">
-                    <h2>colorfood</h2>
-                </div>
+                 <a href="./index.html" class="logo-homepagelink">
+                    <div class="logo">
+                        <img src="./src/cocktailIcon.png" alt="foodlogo">
+                        <h2>colorfood</h2>
+                    </div>
+                </a>
                 <!--
                      <li class="search-icon">
                     <input type="search" placeholder="Search">
