--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <body>
         <header> 
             <nav class="navbar">
-                 <a href="./index.html" class="logo-homepagelink">
-                    <div class="logo">
-                        <img src="./src/cocktailIcon.png" alt="foodlogo">
-                        <h2>colorfood</h2>
-                    </div>
-                </a>
+                 <div class="logo">
+                     <img src="./src/cocktailIcon.png" alt="foodlogo">
+                     <a class="logolink" href="index.html">
+                         <h2>colorfood</h2>
+                     </a>
+                 </div>
                 <!--
                      <li class="search-icon">
                     <input type="search" placeholder="Search">
