adding link to homepage to the header title

--- a/redrecipe.html
+++ b/redrecipe.html
@@ -25,8 +25,10 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="./src/cocktailIcon.png" alt="foodlogo">
-                <h2>colorfood</h2>
-            </div>
+                <a class="logolink" href="index.html">
+                    <h2>colorfood</h2>
+                </a>
+             </div>
             <!--
                  <li class="search-icon">
                 <input type="search" placeholder="Search">
