--- a/recipe-page.html
+++ b/recipe-page.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <div class="rcp-summary">
+      <!-- HEADER IMAGE COLUMN -->
       <div class="column">
         <div class="rcp-image column"></div>
       </div>
 
+      <!-- HEADER TEXT COLUMN -->
       <div class="column">
         <div class="rcp-details gnrl-padding">
           <h1 class="rcp-title">Magical Sprouts and Rapsberry Shake</h1>
@@ -158,6 +160,15 @@
               The human animal is adapted to, and apparently can thrive on, an
               extraordinary range of different diets, but the Western diet,
               however you define it, does not seem to be one of them.
+            </p>
+
+            <h3>
+              <span>Step 07</span>
+            </h3>
+            <p>
+              This, for many people, is what's most offensive about hunting—to
+              some, disgusting: that it encourages, or allows, us not only to
+              kill but to take a certain pleasure in killing.
             </p>
           </div>
         </div>
