--- a/recipe-page.html
+++ b/recipe-page.html
@@ -95,7 +95,7 @@
                     <input
                       type="text"
                       class="form-control search-form"
-                      placeholder="Delicious"
+                      placeholder="Search"
                     />
 
                     <span class="input-group-btn">
