--- a/redrecipe.html
+++ b/redrecipe.html
@@ -70,7 +70,7 @@
 
     <div class= "masonry">
 
-        <a href="recipe-page.html"><div class="container">
+        <a class="recipeLink" href="recipe-page.html"><div class="container">
             <img src="./assets/rhubarbcake.jpg" />
             <div class="recipedescription hide">Rhubarb Cake</div>
             <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
