adding class="recipeLink" to the link of the rhubarb cake

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div> <!-- categories container-->
             <div class= "masonry">
 
-                <a href="recipe-page.html"><div class="container">
+                <a class="recipeLink" href="recipe-page.html"><div class="container">
                     <img src="./assets/rhubarbcake.jpg" />
                     <div class="recipedescription hide">Rhubarb Cake</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
