add img of alfredo sauce

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
-                    <img src="./assets/a.jpg" />
+                    <img src="./assets/alfredosaucesmall.png" />
                     <div class="recipedescription hide">Alfredo Sauce</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
