--- a/greenrecipies.html
+++ b/greenrecipies.html
@@ -58,7 +58,7 @@
         <div class= "masonry">
 
             <div class="container">
-                <img src="./assets/rhubarbcake.jpg" />
+                <img src="./assets/Raspberry-Smoothie.jpg" />
                 <div class="recipedescription hide">Rhubarb Cake</div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
