--- a/redrecipe.html
+++ b/redrecipe.html
@@ -72,7 +72,7 @@
 
         <a class="recipeLink" href="recipe-page.html"><div class="container">
             <img src="./assets/Raspberry-Smoothie.jpg" />
-            <div class="recipedescription hide">Rhubarb Cake</div>
+            <div class="recipedescription hide">Magical Sprouts and Rapsberry Shake</div>
             <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
         </div> </a>
         <div class="container">
