--- a/yellowrecipies.html
+++ b/yellowrecipies.html
@@ -59,7 +59,7 @@
 
             <div class="container">
                 <img src="./assets/Raspberry-Smoothie.jpg" />
-                <div class="recipedescription hide">Rhubarb Cake</div>
+                <div class="recipedescription hide">Magical Sprouts and Rapsberry Shake</div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
