changed rhubarb cake pic to raspberry

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <div class= "masonry">
 
                 <a class="recipeLink" href="recipe-page.html"><div class="container">
-                    <img src="./assets/rhubarbcake.jpg" />
-                    <div class="recipedescription hide">Rhubarb Cake</div>
+                    <img src="./assets/Raspberry-Smoothie.jpg" />
+                    <div class="recipedescription hide">Magical Sprouts and Rapsberry Shakee</div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div></a>
                 <div class="container">
