--- a/redrecipe.html
+++ b/redrecipe.html
@@ -54,7 +54,7 @@
     </header>
 
     <div class="banner">
-          <img src="./assets/raspberry-custard-cake.jpg"/>
+          <img src="./assets/MulledWine.jpg"/>
             <div class='recipeofthedaydesc' >
                     <div class="recipeofthedaybanner">
                          <p>Recipe of the Day</p>
