--- a/yellowrecipies.html
+++ b/yellowrecipies.html
@@ -43,7 +43,7 @@
     
     <main>
         <div class="banner">
-            <img src="./assets/raspberry-custard-cake.jpg"/>
+            <img src="./assets/Mulled-wine.jpg"/>
               <div class='recipeofthedaydesc' >
                       <div class="recipeofthedaybanner">
                            <p>Recipe of the Day</p>
