--- a/whiterecipies.html
+++ b/whiterecipies.html
@@ -49,7 +49,7 @@
                            <p>Recipe of the Day</p>
                       </div>
                       <div class="recipeoftheday">
-                           <p>Check out this easy traybake recipe with sweet raspberries and creamy custard, a perfect teatime treat. Long-life custard is a bit more stable and usually thicker than fresh, so it's good for baking into cakes.</p>
+                           <p>Making mulled wine couldn't be easier. Combine a bottle of red with some orange slices, spices, honey, and brandy, and let it simmer for 10 minutes. THAT'S IT. We like using dry varietals like merlot, malbec, or cab sauv. But really, your favorite bottle should work.</p>
                       </div>
               </div>
           </div>
