--- a/whiterecipies.html
+++ b/whiterecipies.html
@@ -43,7 +43,7 @@
     
     <main>
         <div class="banner">
-            <img src="./assets/Mulled-wine.jpg"/>
+            <img src="./assets/MulledWine.jpg"/>
               <div class='recipeofthedaydesc' >
                       <div class="recipeofthedaybanner">
                            <p>Recipe of the Day</p>
