--- a/recipe-page.html
+++ b/recipe-page.html
@@ -81,6 +81,7 @@
                 <label for="checkbox7"></label>
               </div>
             </li>
+
             <li>
               <div class="form-container">
                 <form
@@ -93,6 +94,7 @@
                 >
                   <div class="input-group">
                     <input
+                      id="search-input"
                       type="text"
                       class="form-control search-form"
                       placeholder="Search"
@@ -114,6 +116,7 @@
             </li>
           </ul>
         </div>
+
         <div class="hamburguer">
           <i class="fas fa-bars"></i>
         </div>
