changed recipe desc font size

--- a/brownrecipies.html
+++ b/brownrecipies.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li><a class="navyellow" href="./yellowrecipies.html">yellow</a></li>
                     <li><a class="navpurple" href="./purplerecipies.html">purple</a></li>
-                    <li><a class="navbrown" href="./brownrecipies.html">brown</a></li>
+                    <li><a class="navbrown page" href="./brownrecipies.html">brown</a></li>
                     <li><a class="navred" href="./redrecipe.html">red</a></li>
                     <li><a class="navwhite" href="./whiterecipies.html">white</a></li>
                     <li><a class="navgreen" href="./greenrecipies.html">green</a></li>
@@ -43,7 +43,7 @@
     
     <main>
         <div class="banner">
-            <img src="./assets/Mulled-wine.jpg"/>
+            <img src="./assets/MulledWine.jpg"/>
               <div class='recipeofthedaydesc' >
                       <div class="recipeofthedaybanner">
                            <p>Recipe of the Day</p>
@@ -57,79 +57,79 @@
 
         <div class= "masonry">
 
-            <div class="container">
+            <a class="recipeLink" href="recipe-page.html"><div class="container">
                 <img src="./assets/Raspberry-Smoothie.jpg" />
-                <div class="recipedescription hide">Magical Sprouts and Rapsberry Shake</div>
+                <div class="recipedescription hide"><p>Magical Sprouts and Rapsberry Shake</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
-            </div>
+            </div> </a>
             <div class="container">
                 <img src="./assets/beet-tagliatelle-with-walnuts.jpg" />
-                <div class="recipedescription hide">Beet Tagliatelle</div>
+                <div class="recipedescription hide"><p>Beet Tagliatelle</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/Turkish-Delight-Recipe.jpg" />
-                <div class="recipedescription hide">Turkish Delight</div>
+                <div class="recipedescription hide"><p>Turkish Delight</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/cauliflower-pizza.jpg" />
-                <div class="recipedescription hide">Couliflower Pizaa</div>
+                <div class="recipedescription hide"><p>Couliflower Pizaa</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/cinnamon-baked-apples.jpg" />
-                <div class="recipedescription hide">Cinnamon Baked Apples</div>
+                <div class="recipedescription hide"><p>Cinnamon Baked Apples</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/ice-cream.jpg" />
-                <div class="recipedescription hide">Ice Cream</div>
+                <div class="recipedescription hide"><p>Ice Cream</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/beetpancake.jpg" />
-                <div class="recipedescription hide">Beet Pancake</div>
+                <div class="recipedescription hide"><p>Beet Pancake</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/Mulled-wine.jpg" />
-                <div class="recipedescription hide">Mulled Wine</div>
+                <div class="recipedescription hide"><p>Mulled Wine</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/lentilsoup.jpg" />
-                <div class="recipedescription hide">Lentil Soup</div>
+                <div class="recipedescription hide"><p>Lentil Soup</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/Strawberry-Gazpacho.jpg" />
-                <div class="recipedescription hide">Strawberry Gazpacho</div>
+                <div class="recipedescription hide"><p>Strawberry Gazpacho</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/Red-Borscht-Recipe.jpg" />
-                <div class="recipedescription hide">Borscht Soup</div>
+                <div class="recipedescription hide"><p>Borscht Soup</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/muammara.jpg" />
-                <div class="recipedescription hide">Muhammara</div>
+                <div class="recipedescription hide"><p>Muhammara</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/Vegan-Burger.jpg" />
-                <div class="recipedescription hide">Vegan Burger</div>
+                <div class="recipedescription hide"><p>Vegan Burger</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
             <div class="container">
                 <img src="./assets/pear.jpg" />
-                <div class="recipedescription hide">Red Pears</div>
+                <div class="recipedescription hide"><p>Red Pears</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div> 
             <div class="container">
                 <img src="./assets/watermelon.jpg" />
-                <div class="recipedescription hide">Watermelon</div>
+                <div class="recipedescription hide"><p>Watermelon</p></div>
                 <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
             </div>
 
