--- a/index.html
+++ b/index.html
@@ -118,77 +118,77 @@
 
                 <a class="recipeLink" href="recipe-page.html"><div class="container">
                     <img src="./assets/Raspberry-Smoothie.jpg" />
-                    <div class="recipedescription hide">Magical Sprouts and Rapsberry Shakee</div>
+                    <div class="recipedescription hide"><p>Magical Sprouts and Rapsberry Shakee<p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div></a>
                 <div class="container">
                     <img src="./assets/devils tongue hot sauce recipe.jpg" />
-                    <div class="recipedescription hide">Hot Sauce</div>
+                    <div class="recipedescription hide"><p>Hot Sauce</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/purple - violette-syrup-213.jpg" />
-                    <div class="recipedescription hide">Violette Syrup</div>
+                    <div class="recipedescription hide"><p>Violette Syrup</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/Red-Borscht-Recipe.jpg" />
-                    <div class="recipedescription hide">Borscht</div>
+                    <div class="recipedescription hide"><p>Borscht</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/cinnamon-baked-apples.jpg" />
-                    <div class="recipedescription hide">Cinnamon Baked Apples</div>
+                    <div class="recipedescription hide"><p>Cinnamon Baked Apples</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/Rainbow-Smoothie-9B-600x902.jpg" />
-                    <div class="recipedescription hide">Rainbow Smoothie</div>
+                    <div class="recipedescription hide"><p>Rainbow Smoothie</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/purple sweet potato soup.jpg" />
-                    <div class="recipedescription hide">Purple Sweet Potato Soup</div>
+                    <div class="recipedescription hide"><p>Purple Sweet Potato Soup</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/white-cake-recipe.jpg" />
-                    <div class="recipedescription hide">White Cake</div>
+                    <div class="recipedescription hide"><p>White Cake</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/brown cold-brew-coffee-with-almond-brown-sugar-syrup-1.jpg" />
-                    <div class="recipedescription hide">Cold Brew Coffee</div>
+                    <div class="recipedescription hide"><p>Cold Brew Coffee</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/yellow - homemade mustard.jpg" />
-                    <div class="recipedescription hide">Homemade mustard</div>
+                    <div class="recipedescription hide"><p>Homemade mustard</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/alfredosaucesmall.png" />
-                    <div class="recipedescription hide">Alfredo Sauce</div>
+                    <div class="recipedescription hide"><p>Alfredo Sauce</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/brown Salted-Dark-Chocolate-Tart-Recipe-3-1.jpg" />
-                    <div class="recipedescription hide">Chocolate Tart</div>
+                    <div class="recipedescription hide"><p>Chocolate Tart</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/Vegan-Burger.jpg" />
-                    <div class="recipedescription hide">Vegan Burger</div>
+                    <div class="recipedescription hide"><p>Vegan Burger</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
                 <div class="container">
                     <img src="./assets/green vegan-thai-green-curry.jpg" />
-                    <div class="recipedescription hide">Thai Curry</div>
+                    <div class="recipedescription hide"><p>Thai Curry</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div> 
                 <div class="container">
                     <img src="./assets/watermelon.jpg" />
-                    <div class="recipedescription hide">Watermelon</div>
+                    <div class="recipedescription hide"><p>Watermelon</p></div>
                     <a href="https://www.pinterest.com/" class="pinterest hide"><img src="assets/pinterest-social-logo-pngrepo-com.png"></a> 
                 </div>
         
