index html link added

--- a/yellowrecipies.html
+++ b/yellowrecipies.html
@@ -26,7 +26,9 @@
             <nav class="navbar">
                 <div class="logo">
                     <img src="./src/cocktailIcon.png" alt="foodlogo">
+                     <a class="logolink" href="index.html">
                     <h2>colorfood</h2>
+                </a>
                 </div>
                 <ul>
                     <li><a class="navyellow page" href="./yellowrecipies.html">yellow</a></li>
